using UnityEngine;

public class Player_bow : MonoBehaviour
{
    public Transform LaunchPoint;
    public GameObject arrowPrefab;
    private Vector2 aimDirection = Vector2.right;

    public playerMovement PlayerMovement;

    public float shootcooldown = .5f;
    private float shootTimer;
    public Animator anim;





    void Update()
    {
        shootTimer -= Time.deltaTime;
        HandleAiming();
        if (Input.GetButtonDown("Shoot") && shootTimer <= 0)
        {
            PlayerMovement.isShooting = true;

            anim.SetBool("isShooting", true);




        
        }
    }
    private void OnEnable()
    {
        anim.SetLayerWeight(0, 0);
        anim.SetLayerWeight(1, 1);
    }
    private void OnDisable()
    {
        anim.SetLayerWeight(0, 1);
        anim.SetLayerWeight(1, 0);
    }


    private void HandleAiming()
    {
        float horizontal = Input.GetAxisRaw("Horizontal");
        float vertical = Input.GetAxisRaw("Vertical");
        if (horizontal != 0 || vertical != 0)
        {
            aimDirection = new Vector2(horizontal, vertical).normalized;
            anim.SetFloat("aimX", aimDirection.x);
            anim.SetFloat("aimY", aimDirection.y);


        }
    }

    public void Shoot1()
    {
        if (shootTimer <= 0)
        {
            Arrow arrow = Instantiate(arrowPrefab, LaunchPoint.position, Quaternion.identity).GetComponent<Arrow>();
            arrow.direction = aimDirection;
            shootTimer = shootcooldown;
        }
        anim.SetBool("isShooting", false);
        PlayerMovement.isShooting = false;
    }
  
}
